# heat_simulation

./: .gitignore  CMakeLists.txt  build.bat  heat_cpu.cpp  heat_cpu.h  heat_gpu.h  imgui.ini  main.cpp  readme.md
utils/: utils.cpp  utils.h
